--- a/index.html
+++ b/index.html
@@ -14,18 +14,13 @@
 	</head>
 
 	<body onload="htmlTableOfContents();">
-        <p>
-			<br>
-            <b><font size="20">Multi-City Energy Analysis</font></b>
-			<br>
-			YiQian Jin, Denis Tan, Jing Ye
-			<br>
-			May 11, 2015
-		</p>
+
+<h1>Multi-City Energy Analysis</h1>
+<h4>YiQian Jin, Denis Tan, Jing Ye</h4>
+<h4>May 11, 2015</h>
 
         <div id="toc">
         </div>
-<br>
 
 <!--<pre><code></code></pre>-->
 
