Revert 06bf799..c4389cf
This rolls back to commit 06bf7994ebe3bde521339d394c7458b78ef8798b.

--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
 	</head>
 
 	<body onload="htmlTableOfContents();">
-
-<h1>Multi-City Energy Analysis</h1>
-<h4>YiQian Jin, Denis Tan, Jing Ye</h4>
-<h4>May 11, 2015</h>
+        <p>
+			<br>
+            <b><font size="20">Multi-City Energy Analysis</font></b>
+			<br>
+			YiQian Jin, Denis Tan, Jing Ye
+			<br>
+			May 11, 2015
+		</p>
 
         <div id="toc">
         </div>
+<br>
 
 <!--<pre><code></code></pre>-->
 
