--- a/index.html
+++ b/index.html
@@ -297,21 +297,12 @@ Figure 16: Holt-Winters forecast for Sacramento (Cluster 4)</p>
 				<script type = "text/javascript"src="map.js"></script>
 			</div>
 			<div id="option">
-				<button href="http://denistanwh.github.io/#toc18" onclick="removedat();runOne()">
-				        Show Cluster 1
-				    </button> 
+				<button href="http://denistanwh.github.io/#toc18" onclick="removedat();runOne();runTwo();runThree();runFour()">
+				        Show Clusters
+				    </button>
 				<script type = "text/javascript"src="cluster1.js"></script>
-				<button href="http://denistanwh.github.io/#toc18" onclick="removedat();runTwo()">
-				        Show Cluster 2
-				    </button>
 				<script type = "text/javascript"src="cluster2.js"></script>
-				<button href="http://denistanwh.github.io/#toc18" onclick="removedat();runThree()">
-				        Show Cluster 3
-				    </button>
 				<script type = "text/javascript"src="cluster3.js"></script>
-				<button href="http://denistanwh.github.io/#toc18" onclick="removedat();runFour()">
-				        Show Cluster 4
-				    </button>
 				<script type = "text/javascript"src="cluster4.js"></script>
 			</div>
 				<div id="option">
