--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 <h2>Visualiation</h2>
 
-<div id="testViz">runOne();</div>
+<div id="testViz" onload="runOne();"></div>
 
 <p>We visualized the data from the above cluster analysis and forecasting steps through a three step procedure using d3 (Bostock, 2013). First, we present a world map centered in the Pacific to depict the cities we considered for this project. Second, zoom in to the 4 groups of cities and present their average daily energy demand over a period of 365 days. Each group of cities are visualized in a Singapore chart. Third, we further zoom in to the city level and visualize the energy forecast for a typical city in each of the 4 groups.</p>
 
