--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <h2>Visualiation</h2>
 
 <div id="ClusterViz">
-	<button href="http://denistanwh.github.io/#toc18" onclick="removedat();runOne();runTwo();setTimeOut(runThree(),1000);setTimeout(runFour(), 3000)">
+	<button href="http://denistanwh.github.io/#toc18" onclick="removedat();runOne();runTwo();setTimeout(runThree(),1000);setTimeout(runFour(), 3000)">
 	        Show Clusters
 	    </button>
 	<script type = "text/javascript"src="cluster1.js"></script>
