--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
 				<button onclick="runCOne()">
 				        Visualize
 				    </button>
+					<script type = "text/javascript"src="city1.js"></script>
 				</div>	
 				<br>
 				<br>
@@ -244,6 +245,7 @@
 				<button onclick="runCTwo()">
 				        Visualize
 				    </button>
+					<script type = "text/javascript"src="city2.js"></script>
 				</div>
 				<br>
 				<br>	
@@ -260,6 +262,7 @@
 				<button onclick="runCThree()">
 				        Visualize
 				    </button>
+					<script type = "text/javascript"src="city3.js"></script>
 				</div>	
 				<br>
 				<br>
@@ -275,6 +278,7 @@ Figure 16: Holt-Winters forecast for Sacramento (Cluster 4)</p>
 				<button onclick="runCFour()">
 				        Visualize
 				    </button>
+					<script type = "text/javascript"src="city4.js"></script>
 				</div>	
 				<br>
 				<br>
