--- a/index.html
+++ b/index.html
@@ -7,24 +7,12 @@
 		<link rel="stylesheet" type"text/css" href="app.css">
 		<script type = "text/javascript" src="js/d3.v3.js"></script>
 		<script type = "text/javascript" src="topojson.v0.min.js"></script>
-		        <script src="./src/html-table-of-contents.js"
-		              type="text/javascript">
 		</script>
 		<script type="text/javascript" src="./tooltip.js"></script>
 	</head>
 
-	<body onload="htmlTableOfContents();">
-        <p>
-			<br>
-            <b><font size="20">Multi-City Energy Analysis</font></b>
-			<br>
-			YiQian Jin, Denis Tan, Jing Ye
-			<br>
-			May 11, 2015
-		</p>
+	<body>
 
-        <div id="toc">
-        </div>
 <br>
 
 <!--<pre><code></code></pre>-->
@@ -231,7 +219,6 @@
 					<script type = "text/javascript"src="city1.js"></script>
 				</div>	
 				<br>
-				<br>
 
 <p>The second cluster’s representative, Dakar, has both a general upward trend and a seasonal (cyclical) pattern that reaches its highest point in the middle of the year before declining towards end of the year.</p>
 
@@ -248,7 +235,6 @@
 					<script type = "text/javascript"src="city2.js"></script>
 				</div>
 				<br>
-				<br>	
 
 <p>The third cluster’s representative, Springfield, has significant periodicity on a yearly basis (see Figure 17). As is the case for cities in Cluster 3, Springfield has two energy demand peaks, a more pronounced peak in the summer and a less pronounced peak in the winter.</p>
 
@@ -265,7 +251,6 @@
 					<script type = "text/javascript"src="city3.js"></script>
 				</div>	
 				<br>
-				<br>
 
 <p>The fourth cluster’s representative, Sacramento, shows a large peak at its summer. Sacramento’s energy demand profile shows a slight downward trend from 2007 to 2013 (see Figure 18).
 Figure 16: Holt-Winters forecast for Sacramento (Cluster 4)</p>
@@ -280,7 +265,6 @@ Figure 16: Holt-Winters forecast for Sacramento (Cluster 4)</p>
 				    </button>
 					<script type = "text/javascript"src="city4.js"></script>
 				</div>	
-				<br>
 				<br>
 
 <p>We also verified that the forecast errors obtained by deducting the fitted data from the original data are normally distributed (see Figure 19).</p>
