--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<script type = "text/javascript" src="topojson.v0.min.js"></script>
 		</script>
 		<script type="text/javascript" src="./tooltip.js"></script>
+		<script type="text/javascript" src="jquery-1.11.3.min.js"></script>
 	
 	</head>
 
